# compiling-to-transformers

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
experiments/reverse/: dataset.py  learning.py  models.py
experiments/reverse/data/dataset/: test.txt  train.txt  val.txt
spec/: preamble.sty  specification.md
src/cajal/: compiling.py  evaluating.py  pretty.py  syntax.py  typing.py
tests/: strategies.py  test_compiling.py  test_evaluating.py  test_strategies.py  test_typing.py
