[project]
name = "cajal"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pyright"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning:torch",
]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["src"]
